Fix javadoc comments